--- a/home/templates/home/includes/home-section-1.html
+++ b/home/templates/home/includes/home-section-1.html
@@ -1,34 +1,33 @@
 {% block content %}
-
-<section>
-<!--- Header --->
+<!--- Header Text --->
 <div class="container-fluid div-section">
-    <div class="container hp-section-3-heading mt-5">
-        <h2 class="home-decor">Be Inspired</h2>
-        <img src="media/logo_small.jpg" width="200" height="200" alt="logo" class="center-3">
+    <div class="container home-section-1-heading">
+        <img src="media/logo_small.jpg" width="200" height="200" alt="logo" class="center-3"></br>
+            <h2 class="home-decor">Be Inspired....</h2>
     </div>
-    <div class="row hp-section-3">
+
+<!--- Be Inspired Images --->
+    <div class="row home-section-3">
         <div class="container">
-            <!--- images --->
             <div class="row product-card-row">
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="div-product-card">
                         <div class="div-product-card-img">
-                            <img src="media/home-1.jpg" alt="diner" class="hp-card-3"> 
+                            <img src="media/home-1.jpg" alt="diner" class="home-card-3"> 
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="div-product-card">
                         <div class="div-product-card-img">
-                            <img src="media/home-2.jpg" alt="baby" class="hp-card-3">
+                            <img src="media/home-2.jpg" alt="baby" class="home-card-3">
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="div-product-card">
                         <div class="div-product-card-img">
-                            <img src="media/home-3.jpg" alt="birthday" class="hp-card-3">
+                            <img src="media/home-3.jpg" alt="birthday" class="home-card-3">
                         </div>
                     </div>
                 </div>
@@ -36,6 +35,5 @@
         </div>
     </div>
 </div>
-</section>
 
 {% endblock %}
