--- a/home/templates/home/includes/home-section-2.html
+++ b/home/templates/home/includes/home-section-2.html
@@ -1,18 +1,18 @@
 {% block content %}
 <!--- Header Text --->
 <div class="container-fluid div-section">
-    <div class="container hp-section-3-heading mt-5">
-        <h2 class="home-decor">My Testimonials</h2>
+    <div class="container home-section-1-heading">
+        </br>
+            <h2 class="home-decor">My Testimonials</h2>
     </div>
 
-
-<!--- Reviews --->
+    <!--- Testimonials --->
     <div class="container mt-4">
         <div id="demo" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="carousel-caption">
-                        <p class="test-text">Shakira is a great. Communication was good and she knew exactly what we wanted. We had a great day! On to the next birthday! </p> <img src="media/carousel-1.jpg" alt="cindy-wong">
+                        <p class="test-text">Shakira is a great. Communication was good and she knew exactly what we wanted. We had a great day! On to the next birthday!  </p> <img src="media/carousel-1.jpg" alt="cindy-wong">
                         <div id="image-caption-1">Cindy Wong</div>
                     </div>
                 </div>
@@ -37,7 +37,5 @@
         </div>
     </div>
 </div>
-
-
 
 {% endblock %}
