--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,30 +1,24 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block page_header %}
+{% block head_content %}
 <!--- Hero image and text --->
-<div id="homepage-header">
-    <div class="container">
-        <div class="row">
-            <div class="col-7 col-md-6">
-            </div>
-            <div class="col-12">
-                <div class="header-content ml-auto">
-                    <div class="header-text">
-                        <h1 id="home-header-h1">Fancy Day Design
-                        </h1>
-                        <p id="home-header-line">'A special moment deserves a Fancy Day Design'</p>
+    <div id="homepage-header">
+        <div class="container">
+            <div class="row">
+                <div class="col-7 col-md-6">
+                </div>
+                <div class="col-12">
+                    <div class="header-content s-auto">
+                        <div class="header-text">
+                            <p id="home-header-tagline">A special moment deserves a</p>
+                            <h1 id="home-header-h1">Fancy Day Design</h1>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="my-5">
-                <h4>
-                    <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
-                </h4>
-            </div>
         </div>
     </div>
-</div>
 {% endblock %}
 
 {% block content %}
