--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -4,18 +4,17 @@
             <div class="container">
                 <div class="row footer-row">
                     <div class="col-sm-12 col-md-6 col-lg-3 no-padding">
-                        <a href="{% url 'products' %}" class="footer-link">Products</a>
-                        <a href="{% url 'about' %}" class="footer-link">About
-                        </a>
-                    </div>
-                    <div class="col-sm-12 col-md-6 col-lg-3 no-padding order-md-3 order-lg-2">
-                        <a href="" class="footer-link">Blog</a>
-                        <a href="{% url 'contact' %}" class="footer-link mb-15-mob">Contact</a>
-                    </div>
-                    <div class="col-sm-12 col-md-6 col-lg-3 no-padding order-md-2 order-lg-3 mt-2">
                         <p class="footer">© Fancy Day Design 2021</p>
                         <p>Hoofddorp</p>
                         <p class="mb-7">The Netherlands</p>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-3 no-padding order-md-3 order-lg-2">
+                        <a href="{% url 'products' %}" class="footer-link">Shop</a>
+                        <a href="{% url 'about' %}" class="footer-link">About</a>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-3 no-padding order-md-2 order-lg-3 mt-2">
+                        <a href="{% url 'post' %}" class="footer-link">Blog</a>
+                        <a href="{% url 'contact' %}" class="footer-link mb-15-mob">Contact</a>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-3 no-padding order-md-4 order-lg-4">
                         <div class="social-media">
@@ -23,11 +22,13 @@
                                 <a href="https://www.instagram.com" class="some-link" target="_blank">
                                     <i class="fab fa-instagram fa-lg"></i>
                                 </a>
-                            </div><div class="div-footer-some">
+                            </div>
+                            <div class="div-footer-some">
                                 <a href="https://www.facebook.com" class="some-link" target="_blank">
                                     <i class="fab fa-facebook-f"></i>
                                 </a>
                             </div>
+
                             <div class="div-footer-some">
                                 <a href="https://www.pinterest.com" class="some-link" target="_blank">
                                     <i class="fab fa-pinterest-p"></i>
