--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -2,170 +2,157 @@
 {% load static %}
 {% load bag_tools %}
 
-{% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
+{% block content %}
+<!--- Header --->
+<div class="container-fluid">
+    <div class="row-products">
+        <div class="col text-center pb-1">
+            <h2 class="logo-font">Shopping Bag</h2>
         </div>
     </div>
-{% endblock %}
-
-{% block content %}
-    <div class="overlay"></div>
-    <div class="container mb-2">
-        <div class="row">
-            <div class="col text-center">
-                <h2 class="logo-font mb-4">Shopping Bag</h2>
-                <hr class="w-50 mb-1">
-            </div>
-        </div>
-        
-<!--- Title Tabs --->
+</div>
+<!--- title Tabs --->
 <div class="row shop-top-row">
     <div class="col-12">
         <div class="title_tabs">
-            <p class="title_tabs-text-cart">
+            <p class="title_tabs-text-bag">
                 <a href="{% url 'home' %}" class="tabs-link">Home</a>
                 |
-                <a href="{% url 'products' %}" class="tabs-link">Shop</a>
+                <a href="{% url 'products' %}" class="tabs-link">Products</a>
                 |
-                <span class="active-tabs">Shopping cart</span>
+                <span class="active-tabs">Shopping Bag</span>
             </p>
         </div>
     </div>
 </div>
-        <div class="row">
-            <div class="col">
-                {% if bag_items %}
-                    <div class="table-responsive rounded">
-                        <table class="table table-sm table-borderless">
-                            <thead class="text-black">
-                                <tr>
-                                    <th scope="col">Product Info</th>
-                                    <th scope="col"></th>
-                                    <th scope="col">Price</th>
-                                    <th scope="col">Qty</th>
-                                    <th scope="col">Subtotal</th>
-                                </tr>
-                            </thead>
-
-                            {% for item in bag_items %}
-                                <tr>
-                                    <td class="p-3 w-25">
-                                        <img class="img-fluid rounded" src="{{ item.product.image.url }}">
-                                    </td>
-                                    <td class="py-3">
-                                        <p class="my-0"><strong>{{ item.product.name }}</strong></p>
-                                        <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
-                                    </td>
-                                    <td class="py-3">
-                                        <p class="my-0">€{{ item.product.price }}</p>
-                                    </td>
-                                    <td class="py-3 w-25">
-                                        <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
-                                            {% csrf_token %}
-                                            <div class="form-group">
-                                                <div class="input-group">
-                                                    <div class="input-group-prepend">
-                                                        <button class="decrement-qty btn btn-sm btn-black rounded-0" 
-                                                            data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
-                                                            <span>
-                                                                <i class="fas fa-minus fa-sm"></i>
-                                                            </span>
-                                                        </button>
-                                                    </div>
-                                                    <input class="form-control form-control-sm qty_input" type="number"
-                                                        name="quantity" value="{{ item.quantity }}" min="1" max="99"
-                                                        data-item_id="{{ item.item_id }}"
-                                                        id="id_qty_{{ item.item_id }}">
-                                                    <div class="input-group-append">
-                                                        <button class="increment-qty btn btn-sm btn-black rounded-0"
-                                                            data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
-                                                            <span>
-                                                                <i class="fas fa-plus fa-sm"></i>
-                                                            </span>
-                                                        </button>
-                                                    </div>
-                                                    {% if item.product.has_sizes %}
-                                                        <input type="hidden" name="product_size" value="{{ item.size }}">
-                                                    {% endif %}
-                                                </div>
-                                            </div>
-                                        </form>
-                                        <a class="update-link text-info"><small>Update</small></a>
-                                        <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-size="{{ item.size }}"><small>Remove</small></a>
-                                    </td>
-                                    <td class="py-3">
-                                        <p class="my-0">€{{ item.product.price | calc_subtotal:item.quantity }}</p>
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                            <tr>
-                                <td colspan="5" class="pt-5 text-right">
-                                    <h6><strong>Bag Total: €{{ total|floatformat:2 }}</strong></h6>
-                                    <h6>Delivery: €{{ delivery|floatformat:2 }}</h6>
-                                    <h4 class="mt-4"><strong>Grand Total: €{{ grand_total|floatformat:2 }}</strong></h4>
-                                    {% if free_delivery_delta > 0 %}
-                                        <p class="mb-1 text-danger">
-                                            You could get free delivery by spending just <strong>€{{ free_delivery_delta }}</strong> more!
-                                        </p>
-                                    {% endif %}
-                                </td>
-                            </tr>
-                            <tr>
-                                <td colspan="5" class="text-right">
-                                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
-                                        <span class="icon">
-                                            <i class="fas fa-chevron-left"></i>
-                                        </span>
-                                        <span class="text-uppercase">Keep Shopping</span>
-                                    </a>
-                                    <a href="{% url 'checkout' %}" class="btn btn-black rounded-0 btn-lg">
-                                        <span class="text-uppercase">Secure Checkout</span>
-                                        <span class="icon">
-                                            <i class="fas fa-lock"></i>
-                                        </span>
-                                    </a>
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-                {% else %}
-                    <p class="lead mb-5">Your bag is empty.</p>
-                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
-                        <span class="icon">
-                            <i class="fas fa-chevron-left"></i>
-                        </span>
-                        <span class="text-uppercase">Keep Shopping</span>
-                    </a>
-                {% endif %}
+<!--- Shopping Bag--->
+<div class="row">
+    <div class="col">
+        {% if bag_items %}
+        <div class="d-block d-md-none">
+            <div class="row">
+                <div class="col">
+                    {% include "bag/bag-total.html" %}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    {% include "bag/checkout-buttons.html" %}
+                </div>
+            </div>
+            {% for item in bag_items %}
+            <div class="row">
+                <div class="col-12 col-sm-6 mb-2 mt-3">
+                    {% include "bag/product-image.html" %}
+                </div>
+                <div class="col-12 col-sm-6 mb-2">
+                    {% include "bag/product-info.html" %}
+                </div>
+                <div class="col-12 col-sm-6 order-sm-last">
+                    <p class="my-0">Price Each: €{{ item.product.price }}</p>
+                    <p><strong>Subtotal: </strong>€{{ item.product.price | calc_subtotal:item.quantity }}</p>
+                </div>
+                <div class="col-12 col-sm-6">
+                    {% include "bag/quantity-form.html" %}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <hr>
+                </div>
             </div>
         </div>
     </div>
+</div>
+{% endfor %}
+<a class="btt-link d-flex h-100">
+    <i class="fas fa-arrow-up scroll-to-top mx-auto my-auto"></i>
+</a>
+<div class="table-responsive rounded d-none d-md-block div-line-item">
+    <table class="table table-sm table-borderless">
+        <thead class="text-black">
+            <tr>
+                <th scope="col"></th>
+                <th scope="col">Item</th>
+                <th scope="col">Price</th>
+                <th scope="col">Qty</th>
+                <th scope="col">Subtotal</th>
+            </tr>
+        </thead>
+
+        {% for item in bag_items %}
+        <tr>
+            <td class="p-3 w-25">
+                {% include "bag/product-image.html" %}
+            </td>
+            <td class="py-3">
+                {% include "bag/product-info.html" %}
+            </td>
+            <td class="py-3">
+                <p class="my-0">€{{ item.product.price }}</p>
+            </td>
+            <td class="py-3 w-25">
+                {% include "bag/quantity-form.html" %}
+            </td>
+            <td class="py-3">
+                <p class="my-0">€{{ item.product.price | calc_subtotal:item.quantity }}</p>
+            </td>
+        </tr>
+        {% endfor %}
+        <tr>
+            <td colspan="5" class="pt-5 text-right">
+                {% include "bag/bag-total.html" %}
+            </td>
+        </tr>
+        <tr>
+            <td colspan="5" class="text-right">
+                {% include "bag/checkout-buttons.html" %}
+            </td>
+        </tr>
+    </table>
+</div>
+{% else %}
+<!--- Empty Bag --->
+    <p class="empty-bag">There are no products in your bag yet. Look at our products!</p>
+<div class="col-12">
+    <div class="d-flex justify-content-center">
+        <a href="{% url 'products' %}" class="cta cta-black">Shop here</a>
+    </div>
+</div>
+{% endif %}
+
 {% endblock %}
 
 {% block postloadjs %}
 {{ block.super }}
+<script type="text/javascript">
+    $('.btt-link').click(function (e) {
+        window.scrollTo(0, 0)
+    })
+</script>
 {% include 'products/includes/quantity_input_script.html' %}
 
 <script type="text/javascript">
     // Update quantity on click
-    $('.update-link').click(function(e) {
+    $('.update-link').click(function (e) {
+        console.log("Update click")
         var form = $(this).prev('.update-form');
         form.submit();
     })
 
     // Remove item and reload on click
-    $('.remove-item').click(function(e) {
+    $('.remove-item').click(function (e) {
+        console.log("Remove click")
         var csrfToken = "{{ csrf_token }}";
         var itemId = $(this).attr('id').split('remove_')[1];
         var url = `/bag/remove/${itemId}/`;
-        var data = {'csrfmiddlewaretoken': csrfToken};
+        var data = { 'csrfmiddlewaretoken': csrfToken, };
 
         $.post(url, data)
-         .done(function() {
-             location.reload();
-         });
+            .done(function () {
+                location.reload();
+            });
     })
 </script>
+
 {% endblock %}
