--- a/static/css/base.css
+++ b/static/css/base.css
@@ -152,7 +152,6 @@ input[name='q']::placeholder {
     margin-top: 20%;
 }
 
-
 /*------------ Homepage Section 1 ------------*/
 
 .home-decor{
@@ -242,15 +241,46 @@ input[name='q']::placeholder {
 h2 {
     font-size: 2.5rem;
 }
+/*----------------------- Shopping bag -------------------*/
 
-/*------product page-------*/
-
-.card-img-top {
-    border: 1px solid #c19c77;
+.div-line-item {
+    margin: 0 auto 50px auto;
+    max-width: 825px;
+    border: #231f20;
+    display: flex;
+    margin-top: 3rem;
+    padding: 1rem;
 }
 
-sort-select-wrapper {
-    border: 1px solid #c19c77;
+.input-group-product-quantity {
+    border: #231f20;
+    width: 120px;
+}
+
+.update-link ,.remove-item {
+    cursor: pointer;
+}
+
+.remove-item {
+    padding-left: 3.5rem;
+}
+
+.form-group-buttons {
+    margin-bottom: .3rem;
+}
+
+.empty-bag {
+    margin: auto;
+    padding: 30px;
+    max-width: 600px;
+    text-align: center;
+    font-size: 1.2rem;
+}
+
+.title_tabs-text-bag {
+    text-transform: uppercase;
+    font-size: 1.1rem;
+    margin-left: 5rem;
 }
 
 /*-------------- Products Page/Title Tabs------------------*/
@@ -273,6 +303,14 @@ sort-select-wrapper {
 .title_tabs-text {
     text-transform: uppercase;
     font-size: 1.1rem;
+}
+
+.card-img-top {
+    border: 1px solid #c19c77;
+}
+
+sort-select-wrapper {
+    border: 1px solid #c19c77;
 }
 
 /* taken from https://www.w3schools.com/howto/howto_js_slideshow.asp */
