--- a/static/css/base.css
+++ b/static/css/base.css
@@ -365,6 +365,66 @@ sort-select-wrapper {
     transition: none;
     opacity: unset;
 }
+
+/*-------------------- Checkout page ------------------*/
+
+.fieldset-label {
+    position: relative;
+    right: .5rem;
+}
+
+#payment-form .form-control,
+#card-element {
+    color: #000;
+    border: 1px solid #000;
+}
+
+.submit-button .cta-white {
+    margin-right: 4rem;
+    border-radius: 0;
+}
+
+fieldset .form-control, #card-element {
+    width: 91%;
+}
+
+.small {
+    font-size: 1.1rem;
+    font-weight: 400;
+}
+
+/*---------------------- Overlay -------------------------*/
+
+#loading-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(241, 193, 137, 0.85);
+    z-index: 9999;
+}
+
+.loading-spinner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    height: 100%;
+}
+
+.paid-order-details {
+    width: 70%;
+    margin: auto;
+}
+
+.general-container {
+    max-width: 650px;
+    margin-bottom: 65px;
+    margin-top: 50px;
+}
+
 /*-------------------- About page ----------------------*/
 
 .about-heading {
