--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -1,58 +1,52 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
-    </div>
-{% endblock %}
 
 {% block content %}
 <!--- Header --->
-<div class="overlay"></div>
 <div class="container-fluid">
-    <div class="row">
-        <div class="col text-center mt-3">
-            <h2 class="logo-font">Contact Fancy Day Design</h2>
-                <hr class="w-50 mb-1">
+    <div class="row-products">
+        <div class="col text-center mt-3 mb-3 pb-1">
+            <h2 class="logo-font">Contact</h2>
         </div>
     </div>
-    <div class="container">
-        <img src="/media/logo_small.jpg" width="200" height="200" alt="logo" class="center-3"> 
+
+<!-- Contact Form -->
+    <div class="container center">
+        <img src="/media/logo_small.jpg" width="200" height="200" alt="logo" class="center-3">
+            <h2 class="contact-heading mt-5">Contact Form</h2>
     </div>
+    
 <!-- Intro Contact Page -->
-    <section>
-        <div class="container-fluid div-section">
-            <div class="container">
-                <div class="row text-center">
-                    <h2 class="h2-style"></h2>
-                </div>
-                <div class="row mt-3 text-center">
-                    <div class="container">
-                        <p class="paragraph-margin">
-                            The more you celebrate moments in life, the more fun you experience. You create special memories with the aim that they last a lifetime. Everyone deserves this, and if someone else isn't doing it for you, you should definitely do it yourself!</br>
-                            Feel free to contact me if you want to know what I can do for you. It gives me satisfaction to make your moment special and unforgettable. 
-                        </p>
-                    </div>
+<section>
+    <div class="container-fluid div-section">
+        <div class="container">
+            <div class="row text-center">
+                <h2 class="h2-style"></h2>
+            </div>
+            <div class="row mt-3 text-center">
+                <div class="container">
+                    <p class="paragraph-margin">
+                        The more you celebrate moments in life, the more fun you experience. You create special memories with the aim that they last a lifetime. Everyone deserves this, and if someone else isn't doing it for you, you should definitely do it yourself!</br>
+                        Feel free to contact me if you want to know what I can do for you. It gives me satisfaction to make your moment special and unforgettable. 
+                    </p>
                 </div>
             </div>
         </div>
-    </section>
-<!--- Contact Form is taken from W3 schools https://www.w3schools.com/howto/howto_css_contact_form.asp --->
+    </div>
+</section>
+<!--- Form/taken from W3 schools https://www.w3schools.com/howto/howto_css_contact_form.asp --->
     <div class="container">
-        <h2 class="contact-heading mt-5 text-center">Contact Form</h2>
         <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2">
-            <form id="contactForm">
+        <form id="contactForm">
             <label for="fullname">Full Name *</label>
-            <input type="text" name="name" class="form-control margin-5" id="fullname" placeholder="Your Name..." required/>
-            <label for="emailaddress">Email Address *</label>
-            <input type="email" name="emailaddress" class="form-control margin-5" id="emailaddress" minlength="10" pattern=".+.com" placeholder="Your Email address.." required/>
-            <label for="projectsummary">Subject *</label>
-            <textarea rows="5" name="projectsummary" class="form-control margin-5" style="height:200px" id="projectsummary" placeholder="Write your query and click submit.." required></textarea>
+                <input type="text" name="name" class="form-control margin-5" id="fullname" placeholder="Your Name..." required/>
+                    <label for="emailaddress">Email Address *</label>
+                    <input type="email" name="emailaddress" class="form-control margin-5" id="emailaddress" minlength="10" pattern=".+.com" placeholder="Your Email address.." required/>
+                    <label for="projectsummary">Subject *</label>
+                    <textarea rows="5" name="projectsummary" class="form-control margin-5" style="height:200px" id="projectsummary" placeholder="Write your query and click submit.." required></textarea>
             <button form="contactForm" type="submit" id="submit" >Submit</button>
-            </form>
+        </form>
         </div>
     </div>
 </div>
@@ -60,5 +54,5 @@
 
 {% block postloadjs %}
 {{ block.super }}
-<script type="text/javascript" src="{% static '/contact/js/email.js' %}"></script>
+<script type="text/javascript" src="{% static 'contact/js/email.js' %}"></script>
 {% endblock %}
