--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -1,79 +1,54 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block extra_css %}
-    <link rel="stylesheet" href="{% static 'profiles/css/profile.css' %}">
-{% endblock %}
-
-{% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
+{% block content %}
+<!-- Profile header -->
+<div class="container-fluid">
+    <div class="row-products">
+        <div class="col text-center mt-3 mb-3 pb-1">
+            <h2 class="logo-font">Profile</h2>
         </div>
     </div>
-{% endblock %}
+</div>
+<!-- title tabs -->
+<div class="container">
+    <div class="row shop-top-row">
+        <div class="col-12">
+            <div class="title_tabs">
+                <p class="title_tabs-text">
+                    <a href="{% url 'home' %}" class="tabs-link">Home</a>
+                    |
+                    <span class="active-tabs">My profile</span>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Page content -->
+<div class="container profile-container">
+    <div class="row">
+        <div class="col-12">
+            <p class="mb-0">
+                Welcome to your profile page, {{ user.username }}!
+                <br>
+                Take your time and look at all the products we have to offer. 
+                If you have any questions feel free to get in touch via our contact form.
+                <br>
+            </p>
+            <div class="div-profile-action-ctas pt-md-5 pb-md-5 mb-3 pt-3 pb-3">
+                <a href="{% url 'order_history' %}" class="cta cta-white">See order history</a>
+                <a href="{% url 'edit_profile' %}" class="cta cta-white">Edit profile details</a>
+            </div>
+            <div class="div-profile-action-ctas mb-3">
+                <a href="{% url 'products' %}" class="cta cta-black d-inline-block m-auto">Shop now</a>
+            </div>
+        </div>
+    </div>
+</div>
 
-{% block content %}
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col text-center mt-3">
-                <h2 class="logo-font mb-4">My Profile</h2>
-                <hr class="w-50 mb-1">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-lg-6">
-                <p class="text-muted">Default Delivery Information</p>
-                <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
-                    {% csrf_token %}
-                    {{ form|crispy }}
-                    <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
-                </form>
-            </div>
-            <div class="col-12 col-lg-6">
-                <p class="text-muted">Order History</p>
-                <div class="order-history table-responsive">
-                    <table class="table table-sm table-borderless">
-                        <thead>
-                            <tr>
-                                <th>Order Number</th>
-                                <th>Date</th>
-                                <th>Items</th>
-                                <th>Order Total</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for order in orders %}
-                                <tr>
-                                    <td>
-                                        <a href="{% url 'order_history' order.order_number %}"
-                                        title="{{ order.order_number }}">
-                                            {{ order.order_number|truncatechars:5  }}
-                                        </a>
-                                    </td>
-                                    <td>{{ order.date }}</td>
-                                    <td>
-                                        <ul class="list-unstyled">
-                                            {% for item in order.lineitems.all %}
-                                                <li class="small">
-                                                    {% if item.product %}
-                                                    {% endif %}{{ item.product.name }} x{{ item.quantity }}
-                                                </li>
-                                            {% endfor %}
-                                        </ul>
-                                    </td>
-                                    <td>€{{ order.grand_total }}</td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
 {% endblock %}
 
 {% block postloadjs %}
-    {{ block.super }}
-    <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
+{{ block.super }}
+<script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
 {% endblock %}
