added 403,404 and 500 error pages

--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -83,7 +83,7 @@
         </div>
         <div class="row pb-2 mt-3">
             <div class="col-8 offset-2">
-                <a href="{% url 'detail_post'  post.slug %}" class="read-text">Read more</a>
+                <a href="{% url 'detail_post'  post.slug %}" class="read-text">Read the full blog post</a>
             </div>
         </div>
     </div>
