--- a/blog/templates/blog/add_blog.html
+++ b/blog/templates/blog/add_blog.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-<!-- Blog header -->
+<!--- Blog Header --->
 <div class="container-fluid">
     <div class="row-products">
         <div class="col text-center mt-3 mb-3 pb-1">
@@ -11,7 +11,7 @@
         </div>
     </div>
 </div>
-<!-- add blog form -->
+<!--- Add Blog form --->
 <div class="container general-container">
     <div class="row">
         <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2">
