changed CSS for homepage

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,7 +11,7 @@
                 <div class="col-12">
                     <div class="header-content s-auto">
                         <div class="header-text">
-                            <p id="home-header-tagline">A special moment deserves a</p>
+                            <p id="home-header-tagline">A special moment deserves a</p></br></br></br>
                             <h1 id="home-header-h1">Fancy Day Design</h1>
                         </div>
                     </div>
