--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-<!-- Add product header -->
+<!--- Add product header --->
 <div class="container-fluid">
     <div class="row-products">
         <div class="col text-center mt-3 mb-3 pb-1">
