--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<!-- title_tabs-->
+<!--- Title Tabs--->
 <div class="container">
     <div class="row shop-top-row">
         <div class="col-12">
@@ -61,7 +61,7 @@
                 {% endif %}
                 <p class="mt-3">{{ product.description }}</p>
                 
-    <!-- Quantity/add to bag-->
+<!--- Quantity/add to bag --->
                 <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
