--- a/static/css/base.css
+++ b/static/css/base.css
@@ -183,11 +183,14 @@ span.badge.rounded-pill {
 }
 
 #home-header-h1 {
-    color: #8d6e63;
+    font-family: 'Archivo Narrow', sans-serif;
+    color: #c19c77;
     font-weight: 500;text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     font-size: 65px;
-    text-align: left;
+    text-align: center;
     margin-left: 5rem;
+    letter-spacing: .1rem;
+    text-decoration: underline;
 }
 
 #home-header-tagline {
@@ -195,13 +198,14 @@ span.badge.rounded-pill {
     font-weight: 100;
     font-size: 70px;
     color: black;
-    
+    text-align: left;
+    text-decoration: underline;
 }
 
 #home-header {
     font-weight: 100;
     font-size: 70px;
-    color: var(--color-light-black);
+    color: black;
     font-family: 'Cookie', sans-serif;
     line-height: 1rem;
 }
