modified allauth email pages

--- a/templates/allauth/account/verification_sent.html
+++ b/templates/allauth/account/verification_sent.html
@@ -13,6 +13,16 @@
     </div>
 </div>
 
-<p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
-
+<div class="container general-container">
+    <div class="row">
+        <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2">
+            <p>{% blocktrans %}We have sent an e-mail to you for verification. 
+                Follow the link provided to finalize the signup process. Please contact us at 
+                <a href="mailto:fancydaydesign2021@gmail.com">fancydaydesign2021@gmail.com</a>
+                if you do not receive it within a few minutes.{% endblocktrans %}
+            </p>
+        </div>
+    </div>
+</div>
 {% endblock %}
+
