changed media_url for images on about page

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -15,7 +15,7 @@
         <div class="row align-items-center my-4">
             <div class="col-12 col-md-6">
                 <div class="image-container my-4">
-                    <img src="/media/about-1.jpeg" alt="about-photo" width="400" height="550" class="about-image">
+                    <img src="{{ MEDIA_URL }}about-1.jpeg" alt="about-photo" width="400" height="550" class="about-image">
                 </div>
             </div>
 <!--- About Container --->
@@ -36,7 +36,7 @@
         </div>
     </div>
     <div class="container home-section-1-heading">
-        <img src="/media/logo_small.jpg" width="200" height="200" alt="logo" class="center-3"></br>
+        <img src="{{ MEDIA_URL }}logo_small.jpg" width="200" height="200" alt="logo" class="center-3"></br>
             <h2 class="home-decor">My Success</h2>
                 <h3 class="new">Gallery</h3></br>
                 <div class="row home-section-3">
@@ -46,21 +46,21 @@
                             <div class="col-12 col-md-6 col-lg-4">
                                 <div class="div-product-card">
                                     <div class="div-product-card-img">
-                                        <a target="_blank" href="/media/dinner.jpeg"><img src="/media/dinner.jpeg" alt="Dinner Theme"></a>
+                                        <a target="_blank" href="{{ MEDIA_URL }}dinner.jpeg"><img src="{{ MEDIA_URL }}dinner.jpeg" alt="Dinner Theme"></a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 col-lg-4">
                                 <div class="div-product-card">
                                     <div class="div-product-card-img">
-                                        <a target="_blank" href="/media/bday_5.jpeg"><img src="/media/bday_5.jpeg" alt="Bday 5 Theme"></a>
+                                        <a target="_blank" href="{{ MEDIA_URL }}bday_5.jpeg"><img src="/{{ MEDIA_URL }}bday_5.jpeg" alt="Bday 5 Theme"></a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 col-lg-4">
                                 <div class="div-product-card">
                                     <div class="div-product-card-img">
-                                        <a target="_blank" href="/media/bday_ballet.jpg"><img src="/media/bday_ballet.jpg" alt="Ballet Theme"></a>
+                                        <a target="_blank" href="{{ MEDIA_URL }}bday_ballet.jpg"><img src="{{ MEDIA_URL }}bday_ballet.jpg" alt="Ballet Theme"></a>
                                     </div>
                                 </div>
                             </div>
@@ -72,7 +72,7 @@
                             <div class="col-12 col-md-6 col-lg-4">
                                 <div class="div-product-card">
                                     <div class="div-product-card-img">
-                                        <a target="_blank" href="/media/bday_farm.jpeg"><img src="/media/bday_farm.jpeg" alt="Farm Theme"></a>
+                                        <a target="_blank" href="/{{ MEDIA_URL }}bday_farm.jpeg"><img src="{{ MEDIA_URL }}bday_farm.jpeg" alt="Farm Theme"></a>
                                     </div>
                                 </div>
                             </div>
