modified all media to media_url for home an blog page

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -53,7 +53,7 @@
                             <div class="col-12 col-md-6 col-lg-4">
                                 <div class="div-product-card">
                                     <div class="div-product-card-img">
-                                        <a target="_blank" href="{{ MEDIA_URL }}bday_5.jpeg"><img src="/{{ MEDIA_URL }}bday_5.jpeg" alt="Bday 5 Theme"></a>
+                                        <a target="_blank" href="{{ MEDIA_URL }}bday_5.jpeg"><img src="{{ MEDIA_URL }}bday_5.jpeg" alt="Bday 5 Theme"></a>
                                     </div>
                                 </div>
                             </div>
@@ -72,21 +72,21 @@
                             <div class="col-12 col-md-6 col-lg-4">
                                 <div class="div-product-card">
                                     <div class="div-product-card-img">
-                                        <a target="_blank" href="/{{ MEDIA_URL }}bday_farm.jpeg"><img src="{{ MEDIA_URL }}bday_farm.jpeg" alt="Farm Theme"></a>
+                                        <a target="_blank" href="{{ MEDIA_URL }}bday_farm.jpeg"><img src="{{ MEDIA_URL }}bday_farm.jpeg" alt="Farm Theme"></a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 col-lg-4">
                                 <div class="div-product-card">
                                     <div class="div-product-card-img">
-                                        <a target="_blank" href="/media/bday_safari.jpg"><img src="/media/bday_safari.jpg" alt="Safari Theme"></a>
+                                        <a target="_blank" href="{{ MEDIA_URL }}bday_safari.jpg"><img src="{{ MEDIA_URL }}bday_safari.jpg" alt="Safari Theme"></a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 col-lg-4">
                                 <div class="div-product-card">
                                     <div class="div-product-card-img">
-                                        <a target="_blank" href="/media/romantic.jpg"><img src="/media/romantic.jpg" alt="Romantic Theme"></a>
+                                        <a target="_blank" href="{{ MEDIA_URL }}romantic.jpg"><img src="{{ MEDIA_URL }}romantic.jpg" alt="Romantic Theme"></a>
                                     </div>
                                 </div>
                             </div>
