--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -31,28 +31,28 @@
             </div>
         </div>
     </section>
-<!-- Blog pictures -->
+<!--- Blog pictures --->
     <div class="row home-section-3">
     <div class="container">
         <div class="row product-card-row">
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="div-product-card">
                     <div class="div-product-card-img">
-                        <img src="/media/blog-1.jpg" alt="Gender Reveal" class="home-card-3"> 
+                        <img src="{{ MEDIA_URL }}blog-1.jpg" alt="Gender Reveal" class="home-card-3"> 
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="div-product-card">
                     <div class="div-product-card-img">
-                        <img src="/media/blog-2.jpg" alt="Mothersday" class="home-card-3">
+                        <img src="{{ MEDIA_URL }}blog-2.jpg" alt="Mothersday" class="home-card-3">
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="div-product-card">
                     <div class="div-product-card-img">
-                        <img src="/media/blog-3.jpg" alt="Theme Event" class="home-card-3">
+                        <img src="{{ MEDIA_URL }}blog-3.jpg" alt="Theme Event" class="home-card-3">
                     </div>
                 </div>
             </div>
