--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -13,7 +13,7 @@
 
 <!-- Contact Form -->
     <div class="container center">
-        <img src="/media/logo_small.jpg" width="200" height="200" alt="logo" class="center-3">
+        <img src="{{ MEDIA_URL }}logo_small.jpg" width="200" height="200" alt="logo" class="center-3">
             <h2 class="contact-heading mt-5">Contact Form</h2>
     </div>
     
