--- a/home/templates/home/includes/home-section-1.html
+++ b/home/templates/home/includes/home-section-1.html
@@ -2,7 +2,7 @@
 <!--- Header Text --->
 <div class="container-fluid div-section">
     <div class="container home-section-1-heading">
-        <img src="media/logo_small.jpg" width="200" height="200" alt="logo" class="center-3"></br>
+        <img src="{{ MEDIA_URL }}logo_small.jpg" width="200" height="200" alt="logo" class="center-3"></br>
             <h2 class="home-decor">Be Inspired....</h2>
     </div>
 
@@ -13,21 +13,21 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="div-product-card">
                         <div class="div-product-card-img">
-                            <img src="media/home-1.jpg" alt="diner" class="home-card-3"> 
+                            <img src="{{ MEDIA_URL }}home-1.jpg" alt="diner" class="home-card-3"> 
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="div-product-card">
                         <div class="div-product-card-img">
-                            <img src="media/home-2.jpg" alt="baby" class="home-card-3">
+                            <img src="{{ MEDIA_URL }}home-2.jpg" alt="baby" class="home-card-3">
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="div-product-card">
                         <div class="div-product-card-img">
-                            <img src="media/home-3.jpg" alt="birthday" class="home-card-3">
+                            <img src="{{ MEDIA_URL }}home-3.jpg" alt="birthday" class="home-card-3">
                         </div>
                     </div>
                 </div>
