--- a/home/templates/home/includes/home-section-2.html
+++ b/home/templates/home/includes/home-section-2.html
@@ -12,21 +12,21 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="carousel-caption">
-                        <p class="test-text">Shakira is a great. Communication was good and she knew exactly what we wanted. We had a great day! On to the next birthday!  </p> <img src="media/carousel-1.jpg" alt="cindy-wong">
+                        <p class="test-text">Shakira is a great. Communication was good and she knew exactly what we wanted. We had a great day! On to the next birthday!  </p> <img src="{{ MEDIA_URL }}carousel-1.jpg" alt="cindy-wong">
                         <div id="image-caption-1">Cindy Wong</div>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="carousel-caption">
                         <p class="test-text">All decorations and balloons are all finely worked out down to the last detail. She is a perfectionist on all points. Good to work with. 
-                        </p> <img src="media/carousel-2.jpg" class="img-fluid" alt="jessica-pardoes">
+                        </p> <img src="{{ MEDIA_URL }}carousel-2.jpg" class="img-fluid" alt="jessica-pardoes">
                         <div id="image-caption-2">Jessica Pardoes</div>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="carousel-caption">
                         <p class="test-text">The decoration of my wedding was really fantastic. I liked everything about it. I'm glad Shakira was able to think along with me. I definitely recommend her!!
-                        </p> <img src="media/carousel-3.jpg" class="img-fluid" alt="felicity-johanson">
+                        </p> <img src="{{ MEDIA_URL }}carousel-3.jpg" class="img-fluid" alt="felicity-johanson">
                         <div id="image-caption-3">Felicity Johanson</div>
                     </div>
                 </div>
