--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,8 +3,9 @@
 
 {% block head_content %}
 <!--- Hero image and text --->
-    <div id="home-header">
-        <div class="container-fluid">
+    
+    <div class="container center">
+        <div id="home-header">
             <div class="row">
                 <div class="col-7 col-md-6">
                 </div>
